# rust-RSM

./: .gitignore  Cargo.toml  README.md  README.org  design.org  rust-toolchain.toml
.cargo/: mutants.toml
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/fuzz/: Cargo.toml
backend/src/: bite_code.rs  expression.rs  external_calls.rs  extrinsic_function.rs  intrinsic_functions.rs  intrinsic_var.rs  lib.rs  operators.rs  runtime.rs  value.rs  var_u.rs  variable.rs
backend/tests/: todo.test
compiler/: Cargo.toml
compiler/src/: bindings.rs  bite_code.rs  command.rs  dollar.rs  function.rs  lib.rs  localvar.rs  op_code.rs  routine.rs  test_harness.rs
compiler/src/expression/: intrinsic_function.rs  literals.rs  mod.rs  test.rs
compiler/src/ir/: expression.rs  external_calls.rs  extrinsic_function.rs  intrinsicVar.rs  intrinsic_functions.rs  intrinsic_var.rs  mod.rs  operators.rs  variable.rs
compiler/src/ir/commands/: break.rs  close.rs  do.rs  for.rs  mod.rs  write.rs
ffi/: Cargo.toml  build.rs  compile_commands.json
ffi/C/: GNUmakefile  compile_commands.json
ffi/C/compile/: dollar.c  dollar.rs  eval.c  eval.rs  localvar.c  localvar.rs  parse.c  parse.rs  routine.c  routine.rs  routine_temp.cOld  var.c
ffi/C/database/: buffer.c  buffer.rs  daemon.c  daemon.rs  get.c  get.rs  ic.c  ic.rs  kill.c  kill.rs  locate.c  locate.rs  main.c  main.rs  mount.c  mount.rs  rekey.c  rekey.rs  set.c  set.rs  uci.c  uci.rs  util.c  util.rs  view.c  view.rs
ffi/C/include/: compile.h  compile_temp.h  mocks.h  seams.h
ffi/C/init/: create.c  create.rs  rsm.c  rsm.rs  run.c  run.rs  start.c  start.rs  util.c  util.rs
ffi/C/runtime/: attn.c  attn.rs  buildmvar.c  buildmvar.rs  debug.c  debug.rs  func.c  func.rs  math.c  math.rs  mvar.c  pattern.c  pattern.rs  run.c  run.rs  ssvn.c  ssvn.rs  util.c  util.rs  var.c  var.rs
ffi/C/seqio/: device.c  device.rs  file.c  file.rs  pipe.c  pipe.rs  seqio.c  seqio.rs  signal.c  signal.rs  socket.c  socket.rs  tcpip.c  tcpip.rs  util.c  util.rs
ffi/C/symbol/: new.c  new.rs  util.c  util.rs
ffi/C/util/: error.c  key.c  key.rs  lock.c  lock.rs  memory.c  memory.rs  routine.c  routine.rs  share.c  share.rs  strerror.c  strerror.rs
ffi/C/xcall/: xcall.c
ffi/src/: bindings.rs  job_pool.rs  lib.rs  parse.rs  run.rs  symbol_table.rs  value.rs  var_u.rs
ffi/src/interface/: mod.rs
frontend/: Cargo.toml
frontend/src/: expression.rs  external_calls.rs  extrinsic_function.rs  intrinsic_functions.rs  intrinsic_var.rs  lib.rs  operators.rs  variable.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: front_end.rs
interpreter/: Cargo.toml  build.rs  clippy.toml  inital.ron  test.ron
interpreter/fuzz/: Cargo.toml
interpreter/fuzz/fuzz_targets/: fuzz_target_1.rs  key_build.rs  key_extract.rs  key_string.rs  symbol_table.rs
interpreter/src/: alloc.rs  bindings.rs  buildmvar.rs  create.rs  global_buf.rs  key.rs  label.rs  lib.rs  lock_tab.rs  main.rs  run.c  run.rs  start.rs  sys_tab.rs  test_helper.rs  units.rs  util.rs  value.rs  var_u.rs  vol_def.rs
interpreter/src/key/: a_b_testing.rs  format.rs  internal.rs  mod.rs
interpreter/src/run/: calculate_privilage.rs  find_open_slot.rs  mod.rs  parse_env.rs
interpreter/src/shared_seg/: alloc.rs  lock_tab.rs  mod.rs  sys_tab.rs  test_utils.rs
interpreter/src/shared_seg/vol_def/: global_buf.rs  label.rs  mod.rs
interpreter/src/symbol_table/: compile.h  error.h  hash.rs  init.h  m_var.rs  manual.rs  mod.rs  new.c  proto.h  rsm.h  symbol.h  tests.rs  util.c  var_data.rs  var_u.rs
interpreter/src/symbol_table/var_data/: mod.rs  tests.rs
interpreter/test_artifacts/: temp
ir/: Cargo.toml
ir/src/: expression.rs  external_calls.rs  extrinsic_function.rs  intrinsic_functions.rs  intrinsic_var.rs  lib.rs  operators.rs  variable.rs
lang-model/: Cargo.toml
lang-model-macro/: Cargo.toml
lang-model-macro/src/: lib.rs
lang-model/src/: lib.rs  models.rs
lang-server/: Cargo.toml
lang-server/src/: main.rs
lang_models/: Cargo.toml
lang_models/src/: lib.rs
middle/: Cargo.toml  build.rs
middle/C/: Makefile
middle/C/compile/: dollar_temp.c  eval.c  eval_temp.c  eval_temp.cOld  localvar_temp.c  routine_temp.c
middle/C/include/: compile.h  compile_temp.h
middle/C/init/: rsm.c
middle/src/:  pC  bindings.rs  command.pest  command.rs  dollar.pest  dollar.rs  eval.rs  exp.pest  ffi.rs  function.pest  function.rs  lib.rs  localvar.pest  localvar.rs  main.rs  op_code.rs  opcode.pest  pattern.pest  routine.pest  routine.rs  temp.rs  test_harness.rs  var.rs
middle/src/eval/: mod.rs  test.rs
middle/src/expression/: intrinsicFunction.rs  intrinsic_function.rs  literals.rs  mod.rs  test.rs
parser/: Cargo.toml
symbol_table/: Cargo.toml
symbol_table/fuzz/: Cargo.toml
symbol_table/fuzz/fuzz_targets/: key_build.rs  key_extract.rs  key_string.rs  symbol_table.rs
symbol_table/src/: hash.rs  lib.rs  m_var.rs  rust.h  tests.rs  value.rs  var_u.rs  variable_name.rs
symbol_table/src/key/: a_b_testing.rs  format.rs  internal.rs  mod.rs
symbol_table/src/value_tree/: mod.rs  tests.rs
symbol_table/src/var_data/: mod.rs  tests.rs
tree-sitter-M/: Cargo.toml  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
tree-sitter-M/bindings/c/: tree-sitter-mumps.h  tree-sitter-mumps.pc.in
tree-sitter-M/bindings/go/: binding.go  binding_test.go  go.mod
tree-sitter-M/bindings/node/: binding.cc  index.js
tree-sitter-M/bindings/python/tests/: test_binding.py
tree-sitter-M/bindings/python/tree_sitter_mumps/: __init__.py  binding.c
tree-sitter-M/bindings/rust/: build.rs  lib.rs
tree-sitter-M/bindings/swift/TreeSitterMumpsTests/: TreeSitterMumpsTests.swift
tree-sitter-M/queries/: highlights.scm
tree-sitter-M/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-M/test/corpus/: example.txt  number.txt  string.txt
value/: Cargo.toml
value/benches/: my_benchmark.rs
value/src/: arbitrary.rs  constents.rs  convertions.rs  ffi.rs  lib.rs  number.rs
value/src/number/: add.rs  mod.rs
(+73 files in other folders)
