[package]
name = "ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.158"
value = { path = "../value"}
symbol_table = { path = "../symbol_table/"}


[build-dependencies]
bindgen = "0.70.1"
cc = "1.1.16"
cbindgen = "0.27.0"
glob = "0.3.1"
