[package]
name = "rsm-backend-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
ffi = {path = "../ffi"}
value = { path = "../value"  }
symbol_table = { path = "../symbol_table", features = ["arbitrary"] }
frontend = {path = "../frontend"}
backend = {path = "../backend"}


[[bin]]
name = "front_end"
path = "./fuzz_targets/front_end.rs/"
test = false
doc = false
bench = false

[[bin]]
name = "symbol_table"
path = "fuzz_targets/symbol_table.rs"
test = false
doc = false
bench = false
