[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
libc = "0.2.139"
uname = "0.1.1"
rsm= { path = "../middle"}
easy-ext = "1.0.1"
