[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
libc = "0.2.139"
uname = "0.1.1"
rsm= { path = "../middle"}
thiserror = "1.0.56"

[dev-dependencies]
uuid = { version = "1.7.0", features = ["v4"] }
rstest = "0.18.2"
rand = "0.8.5"
