[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
fuzzing = []

[dependencies]
clap = { version = "4.0.8", features = ["derive"] }
libc = "0.2.139"
uname = "0.1.1"
thiserror = "1.0.56"
ffi = { path = "../ffi"}
ref-cast = "1.0.22"
derive_more = "0.99.17"
arbitrary = "1.3.2"

[dev-dependencies]
uuid = { version = "1.7.0", features = ["v4"] }
rstest = "0.18.2"
pretty_assertions = "1.4.0"
