[package]
name = "lang-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-types = "0.97.0"
tokio = { version = "1.43.1", features = ["macros", "io-std", "rt-multi-thread"] }
tower-lsp = "0.20.0"
lang-model= { path = "../lang-model"}
tree-sitter-mumps = { path = "../tree-sitter-M"}
tree-sitter = "0.20.10"
