[package]
name = "rsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-mumps = { path = "../tree-sitter-M"}
tree-sitter = "0.20.9"

lang_models = { path = "../lang_models"}

[dev-dependencies]
rstest = "0.17.0"


[build-dependencies]
bindgen = "0.66.1"
cc = "1.0"
cbindgen = "0.24.5"
glob = "0.3.1"