[package]
name = "symbol_table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
fuzzing = []

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
arrayvec = "0.7.6"
ffi = { path = "../ffi", optional=true}

[dev-dependencies]
rstest = "0.22.0"
pretty_assertions = "1.4.0"
mutants = "0.0.3"
rand = "0.8.5"
