[package]
name = "symbol_table"
version = "0.1.0"
edition = "2024"

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"], optional=true}
arrayvec = {version = "0.7.6",features = ["serde"]}
value = { path = "../value/" ,features= ["arbitrary"]}
ron = "0.8.1"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "2.0.16"

[dev-dependencies]
rstest = "0.22.0"
pretty_assertions = "1.4.0"
mutants = "0.0.3"
rand = "0.8.5"
