[package]
name = "tree-sitter-mumps"
description = "mumps grammar for the tree-sitter parsing library"
version = "0.0.1"
edition = "2021"
keywords = ["incremental", "parsing", "mumps"]
categories = ["parsing", "text-editors"]

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
