[package]
name = "value"
version = "0.1.0"
edition = "2024"

[features]
fuzzing = []

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
arbitrary = { version = "1.3.2", features = ["derive"] }
ffi = { path = "../ffi", optional=true}

[dev-dependencies]
rstest = "0.22.0"
mutants = "0.0.3"
