[package]
name = "value"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
arbitrary = { version = "1.3.2", features = ["derive"], optional=true}
thiserror = "2.0.11"

[dev-dependencies]
rstest = "0.22.0"
mutants = "0.0.3"
quickcheck = "1"
quickcheck_macros = "1"
