[package]
name = "rsm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.symbol_table]
path = ".."
features = ["fuzzing","ffi"]

[dependencies.ffi]
path = "../../ffi"

[[bin]]
name = "symbol_table"
path = "fuzz_targets/symbol_table.rs"
test = false
doc = false
bench = false
