[package]
name = "rsm-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
value = { path = "../../value", features = ["ffi"] }

[dependencies.symbol_table]
path = ".."
features = ["fuzzing","ffi"]

[dependencies.ffi]
path = "../../ffi"

[[bin]]
name = "symbol_table"
path = "fuzz_targets/symbol_table.rs"
test = false
doc = false
bench = false
